--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Burger Quest</title>
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
-		<script src="/assets/js/burgers.js"></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
+        <script src="/assets/js/burgers.js"></script>
     </head>
 
     <body>
