--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      {{> burgers/burger-block devoured = false }}
+      {{> burgers/burger-block devoured=true }}
     {{/unless}}
   {{/each}}
 </ul>
@@ -16,7 +16,9 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
+    <li>
       {{burger_name}}
+    </li>
     {{/if}}
   {{/each}}
 </ul>
