started working on css. Finish designing

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
+<div class="header">
 <h1>Burger Quest!</h1>
 <h3>The quest to devour the finest burgers of the land</h3>
+</div>
 
 <h2>Burgers to Conqure!</h2>
 
