Fixing img fluid issues on crest

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
 </div>
 
 <div class="crest-box row d-flex justify-content-center">
-  <img class="crest" src="/assets/burgerquestcrest.png" alt="burger-quest-crest">
+  <img class="crest img-fluid" src="/assets/burgerquestcrest.png" alt="burger-quest-crest">
 </div>
 
 <hr class="buffer-top">
