--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,15 @@
       <h1>Burger Quest!</h1>
     </div>
     <div class="header">
-      <h3>The quest to devour the finest burgers of the land</h3>
+      <h3>The quest to devour the finest burgers in the land</h3>
     </div>
   </div>
 </div>
 
 <div class="crest-box row d-flex justify-content-center">
-  <img class="crest img-fluid" src="/assets/burgerquestcrest.png" alt="burger-quest-crest">
+  <div class="col-4 d-flex justify-content-center">
+    <img class="crest img-fluid" src="/assets/burgerquestcrest.png" alt="burger-quest-crest">
+  </div>
 </div>
 
 <hr class="buffer-top">
