--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
 
 <div class="crest-box row d-flex justify-content-center">
   <div class="col-4 d-flex justify-content-center">
-    <img class="crest img-fluid" src="/assets/burgerquestcrest.png" alt="burger-quest-crest">
+    <img class="crest" src="/assets/burgerquestcrest.png" alt="burger-quest-crest">
   </div>
 </div>
 
